--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -2,12 +2,23 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>Log__c</members>
-        <members>Apex_Logger_Setting__mdt</members>
+        <members>Logger_Setting__mdt</members>
+        <members>Administrator__c</members>
         <name>CustomObject</name>
     </types>
+
     <types>
         <members>DummyClass</members>
+        <members>Logger</members>
+        <members>LoggerUtil</members>
+        <members>LoggerConstants</members>
         <name>ApexClass</name>
     </types>
+
+    <types>
+        <members>Logger_Setting.Global_Setting</members>
+        <name>CustomMetadata</name>
+    </types>
+
     <version>52.0</version>
 </Package>
