implement trigger and handler, expand custom mdt

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -12,7 +12,13 @@
         <members>Logger</members>
         <members>LoggerUtil</members>
         <members>LoggerConstants</members>
+        <members>LogTriggerHandler</members>
         <name>ApexClass</name>
+    </types>
+
+    <types>
+        <members>LogTrigger</members>
+        <name>ApexTrigger</name>
     </types>
 
     <types>
